--- a/TNA_call.html
+++ b/TNA_call.html
@@ -270,25 +270,25 @@
                             <div class="sidebar-widget download-widget">
                                 <ul class="download-list clearfix">
                                     <li>
-                                        <div class="icon"><img src="assets/images/icons services/doc_icon.svg" alt="PDF Icon" style="width: 32px; height: 42px;"></div>
+                                        <div class="icon"><i class="fa-regular fa-file-word"></i></div>
                                         <h5>T-NA Application Form</h5>
-                                        <a href="https://backoffice.ebrains-italy.eu/uploads/Application_form_78eb56290e.docx"><i class="flaticon-down-arrow-1"></i></a>
+                                        <a href="https://backoffice.ebrains-italy.eu/uploads/Application_form_78eb56290e.docx"><i class="fa-solid fa-down-long"></i></a>
                                     </li>
                                     <li>
-                                        <div class="icon"><i class="flaticon-pdf"></i></div>
+                                        <div class="icon"><i class="fa-regular fa-file-pdf"></i></div>
                                         <h5>Open call T-NA EBRAINS-Italy</h5>
                                         <p> </p>
-                                        <a href="https://backoffice.ebrains-italy.eu/uploads/Open_call_T_NA_EBRAINS_Italy_d13c77dc67.pdf"><i class="flaticon-down-arrow-1"></i></a>
+                                        <a href="https://backoffice.ebrains-italy.eu/uploads/Open_call_T_NA_EBRAINS_Italy_d13c77dc67.pdf"><i class="fa-solid fa-down-long"></i></a>
                                     </li>
                                     <li>
-                                        <div class="icon"><img src="assets/images/icons services/doc_icon.svg" alt="PDF Icon" style="width: 32px; height: 42px;"></div>
+                                        <div class="icon"><i class="fa-regular fa-file-word"></i></div>
                                         <h5>T-NA Confirmation of Access</h5>
-                                        <a href="https://view.officeapps.live.com/op/view.aspx?src=https%3A%2F%2Fbackoffice.ebrains-italy.eu%2Fuploads%2FT_NA_Confirmation_of_Access_81f39824f6.docx&wdOrigin=BROWSELINK"><i class="flaticon-down-arrow-1"></i></a>
+                                        <a href="https://view.officeapps.live.com/op/view.aspx?src=https%3A%2F%2Fbackoffice.ebrains-italy.eu%2Fuploads%2FT_NA_Confirmation_of_Access_81f39824f6.docx&wdOrigin=BROWSELINK"><i class="fa-solid fa-down-long"></i></a>
                                     </li>
                                     <li>
-                                        <div class="icon"><img src="assets/images/icons services/doc_icon.svg" alt="PDF Icon" style="width: 32px; height: 42px;"></div>
+                                        <div class="icon"><i class="fa-regular fa-file-word"></i></div>
                                         <h5>T-NA Activity Report</h5>
-                                        <a href="https://view.officeapps.live.com/op/view.aspx?src=https%3A%2F%2Fbackoffice.ebrains-italy.eu%2Fuploads%2FT_NA_Confirmation_of_Access_81f39824f6.docx&wdOrigin=BROWSELINK"><i class="flaticon-down-arrow-1"></i></a>
+                                        <a href="https://view.officeapps.live.com/op/view.aspx?src=https%3A%2F%2Fbackoffice.ebrains-italy.eu%2Fuploads%2FT_NA_Confirmation_of_Access_81f39824f6.docx&wdOrigin=BROWSELINK"><i class="fa-solid fa-down-long"></i></a>
                                     </li>
                                 </ul>
                             </div>
@@ -411,7 +411,32 @@
                                                     <div class="lower-content">
                                                         <span class="category"> Centers</span>
                                                         <h3><a href="index.html"> Research Teams</a></h3>
-                                                        <p> Explore the available facilities and start your application today!</p>
+                                                        <p> </p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6 col-md-6 col-sm-12 project-block">
+                                        <div class="project-block-one">
+                                            <div class="inner-box">
+                                                <div class="static-content">
+                                                    <figure class="image-box"><img src="assets/images/TNA/TNA ACCESS FORM.png" alt=""></figure>
+                                                    <div class="lower-content">
+                                                        <span class="category"> Forms</span>
+                                                        <h3><a href="TNA_FORM.html"> TNA Research Form</a></h3>
+                                                    </div>
+                                                </div>
+                                                <div class="overlay-content">
+                                                    <div class="image-box">
+                                                        <figure class="image"><img src="assets/images/TNA/TNA_ACCESS_FORM.svg" alt=""></figure>
+                                                        <div class="view-btn"><a href="TNA_FORM.html" class="lightbox-image" data-fancybox="gallery"><i class="flaticon-zoom-in"></i></a></div>
+                                                        <div class="link-btn"><a href="TNA_FORM.html"><i class="flaticon-right-arrow"></i></a></div>
+                                                    </div>
+                                                    <div class="lower-content">
+                                                        <span class="category"> Forms</span>
+                                                        <h3><a href="index.html"> TNA Research Form</a></h3>
+                                                        <p>  </p>
                                                     </div>
                                                 </div>
                                             </div>
